тип e-mail для инпута формы

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 <div class="modal__form">
                     <form class="modal__send" action="./mail.php" method="POST">
                         <input name="name" placeholder="name" type="text" required>
-                        <input name="email" placeholder="e-mail" type="text" required>
+                        <input name="email" placeholder="e-mail" type="email" required>
                         <textarea name="message" placeholder="enter your message" required></textarea>
                         <button class="modal__btn" type="submit">Send</button>
                     </form>
