проверка отображения на ретина дисплее без srcset для ретины

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <main>
             <section class="main">
                 <div class="main__image">
-                    <picture><source srcset="img/main-bg.webp 1x, img/main-bg@2x.webp 2x" type="image/webp"><img src="img/main-bg.jpg" srcset="img/main-bg@2x.jpg 2x" alt="picture with organic food"></picture>
+                    <picture><source srcset="img/main-bg.webp" type="image/webp"><img src="img/main-bg.jpg" alt="picture with organic food"></picture>
                     </div>
                 <div class="main__content">
                     <h1>Organic food</h1>
@@ -55,19 +55,19 @@
                 <div class="category__galery">
                     <div class="category__row">
                         <div class="category__item _rotate">
-                            <picture><source srcset="img/cat-sweet.webp 1x, img/cat-sweet@2x.webp 2x" type="image/webp"><img src="img/cat-sweet.jpg" srcset="img/cat-sweet@2x.jpg 2x" alt="awesome sweets"></picture>
+                            <picture><source srcset="img/cat-sweet.webp" type="image/webp"><img src="img/cat-sweet.jpg" alt="awesome sweets"></picture>
                             <div class="category__title _rotate"><span>awesome</span>
                                 <p>sweets</p>
                             </div>
                         </div>
                         <div class="category__item _column">
-                            <picture><source srcset="img/cat-food.webp 1x, img/cat-food@2x.webp 2x" type="image/webp"><img src="img/cat-food.jpg" srcset="img/cat-food@2x.jpg 2x" alt="organic food"></picture>
+                            <picture><source srcset="img/cat-food.web" type="image/webp"><img src="img/cat-food.jpg" alt="organic food"></picture>
                             <div class="category__title _top"><span>organic</span>
                                 <p>food</p>
                             </div>
                         </div>
                         <div class="category__item _column">
-                            <picture><source srcset="img/cat-meet.webp 1x, img/cat-meet@2x.webp 2x" type="image/webp"><img src="img/cat-meet.jpg" srcset="img/cat-meet@2x.jpg 2x" alt="tasty meat"></picture>
+                            <picture><source srcset="img/cat-meet.web" type="image/webp"><img src="img/cat-meet.jpg" alt="tasty meat"></picture>
                             <div class="category__title _top"><span>tasty</span>
                                 <p>meat</p>
                             </div>
@@ -80,7 +80,7 @@
                             <p>awesome Products</p>
                         </div>
                         <div class="category__item _box">
-                            <picture><source srcset="img/cat-fruit.webp 1x, img/cat-fruit@2x.webp 2x" type="image/webp"><img src="img/cat-fruit.jpg" srcset="img/cat-fruit@2x.jpg 2x" alt="juicy fruits"></picture>
+                            <picture><source srcset="img/cat-fruit.webp" type="image/webp"><img src="img/cat-fruit.jpg" alt="juicy fruits"></picture>
                             <div class="category__title"><span>juicy</span>
                                 <p>fruits</p>
                             </div>
@@ -139,22 +139,22 @@
                     <button class="pages__btn">Discover</button>
                 </div>
                 <div class="pages__galery _container">
-                    <div class="pages__image"><picture><source srcset="img/galery1.webp 1x, img/galery1@2x.webp 2x" type="image/webp"><img src="img/galery1.jpg" srcset="img/galery1@2x.jpg 2x" alt="sandwich"></picture></div>
+                    <div class="pages__image"><picture><source srcset="img/galery1.webp" type="image/webp"><img src="img/galery1.jpg"  alt="sandwich"></picture></div>
                     <div class="pages__text"><span>Health Benefits of a Raw Food</span>Dogfish shark, bango hog sucker,
                         baikal oilfish, eeltail catfish regal whiptail catfish; squarehead catfish electric ray.</div>
-                    <div class="pages__image"><picture><source srcset="img/galery2.webp 1x, img/galery2@2x.webp 2x" type="image/webp"><img src="img/galery2.jpg" srcset="img/galery2@2x.jpg 2x" alt="serving breakfast"></picture></div>
+                    <div class="pages__image"><picture><source srcset="img/galery2.webp" type="image/webp"><img src="img/galery2.jpg" alt="serving breakfast"></picture></div>
                     <div class="pages__text"><span>Tips for Ripening your Fruit</span>The generated Lorem Ipsum is
                         therefore always free from repetition injected humour</div>
 
                     <div class="pages__text"><span>Superfoods you should be eating</span>The generated Lorem Ipsum is
                         therefore always free from repetition injected humour</div>
-                    <div class="pages__image"><picture><source srcset="img/galery3.webp 1x, img/galery3@2x.webp 2x" type="image/webp"><img src="img/galery3.jpg" srcset="img/galery3@2x.jpg 2x" alt="pancakes"></picture></div>
+                    <div class="pages__image"><picture><source srcset="img/galery3.webp" type="image/webp"><img src="img/galery3.jpg" alt="pancakes"></picture></div>
 
                     <div class="pages__text"><span>Grunt torrent catfish squaretail Norwegian Atlantic
                             salmon</span>Northern clingfish searobin betta blue shark. Jackfish leopard danio
                         suckermouth armored catfish, eelpout velvetfish goldspotted killifish--driftfish ronquil emperor
                         golden loach</div>
-                    <div class="pages__image"><picture><source srcset="img/galery4.webp 1x, img/galery4@2x.webp 2x" type="image/webp"><img src="img/galery4.jpg" srcset="img/galery4@2x.jpg 2x" alt="yogurt"></picture></div>
+                    <div class="pages__image"><picture><source srcset="img/galery4.webp" type="image/webp"><img src="img/galery4.jpg" alt="yogurt"></picture></div>
                 </div>
             </section>
 
@@ -164,7 +164,7 @@
                 </div>
                 <div class="view__images">
                     <picture><source srcset="img/organic.webp" type="image/webp"><img class="view__logo" src="img/organic.png" alt="logo organic food"></picture>
-                    <picture><source srcset="img/cake.webp 1x, img/cake@2x.webp 2x" type="image/webp"><img class="view__img" src="img/cake.png" alt="piece of cake"></picture>
+                    <picture><source srcset="img/cake.webp" type="image/webp"><img class="view__img" src="img/cake.png" alt="piece of cake"></picture>
                 </div>
             </section> 
 
@@ -204,14 +204,14 @@
                     </div>
                 </div>
                 <div class="progress__galery">
-                    <div class="progress__box"><a class="progress__link" href="#">tasty jam</a><picture><source srcset="img/prog-galery1.webp 1x, img/prog-galery1@2x.webp 2x" type="image/webp"><img src="img/prog-galery1.jpg" srcset="img/prog-galery1@2x.jpg 2x" alt="tasty jam"></picture></div>
-                    <div class="progress__box"><a class="progress__link" href="#">cherry</a><picture><source srcset="img/prog-galery2.webp 1x, img/prog-galery2@2x.webp 2x" type="image/webp"><img src="img/prog-galery2.jpg" srcset="img/prog-galery2@2x.jpg 2x" alt="cherry"></picture></div>
-                    <div class="progress__box"><a class="progress__link" href="#">healthy desert</a><picture><source srcset="img/prog-galery3.webp 1x, img/prog-galery3@2x.webp 2x" type="image/webp"><img src="img/prog-galery3.jpg" srcset="img/prog-galery3@2x.jpg 2x" alt="healthy desert"></picture></div>
-                    <div class="progress__box"><a class="progress__link" href="#">raspberries</a><picture><source srcset="img/prog-galery4.webp 1x, img/prog-galery4@2x.webp 2x" type="image/webp"><img src="img/prog-galery4.jpg" srcset="img/prog-galery4@2x.jpg 2x" alt="raspberries"></picture></div>
-                    <div class="progress__box"><a class="progress__link" href="#">nuts</a><picture><source srcset="img/prog-galery5.webp 1x, img/prog-galery5@2x.webp 2x" type="image/webp"><img src="img/prog-galery5.jpg" srcset="img/prog-galery5@2x.jpg 2x" alt="nuts"></picture></div>
-                    <div class="progress__box"><a class="progress__link" href="#">cocktails</a><picture><source srcset="img/prog-galery6.webp 1x, img/prog-galery6@2x.webp 2x" type="image/webp"><img src="img/prog-galery6.jpg" srcset="img/prog-galery6@2x.jpg 2x" alt="cocktails"></picture></div>
-                    <div class="progress__box"><a class="progress__link" href="#">marmalade</a><picture><source srcset="img/prog-galery7.webp 1x, img/prog-galery7@2x.webp 2x" type="image/webp"><img src="img/prog-galery7.jpg" srcset="img/prog-galery7@2x.jpg 2x" alt="marmalade"></picture></div>
-                    <div class="progress__box"><a class="progress__link" href="#">vegetables</a><picture><source srcset="img/prog-galery8.webp 1x, img/prog-galery8@2x.webp 2x" type="image/webp"><img src="img/prog-galery8.jpg" srcset="img/prog-galery8@2x.jpg 2x" alt="vegetables"></picture></div>
+                    <div class="progress__box"><a class="progress__link" href="#">tasty jam</a><picture><source srcset="img/prog-galery1.webp" type="image/webp"><img src="img/prog-galery1.jpg" alt="tasty jam"></picture></div>
+                    <div class="progress__box"><a class="progress__link" href="#">cherry</a><picture><source srcset="img/prog-galery2.webp" type="image/webp"><img src="img/prog-galery2.jpg" alt="cherry"></picture></div>
+                    <div class="progress__box"><a class="progress__link" href="#">healthy desert</a><picture><source srcset="img/prog-galery3.webp" type="image/webp"><img src="img/prog-galery3.jpg" alt="healthy desert"></picture></div>
+                    <div class="progress__box"><a class="progress__link" href="#">raspberries</a><picture><source srcset="img/prog-galery4.webp" type="image/webp"><img src="img/prog-galery4.jpg" alt="raspberries"></picture></div>
+                    <div class="progress__box"><a class="progress__link" href="#">nuts</a><picture><source srcset="img/prog-galery5.webp" type="image/webp"><img src="img/prog-galery5.jpg" alt="nuts"></picture></div>
+                    <div class="progress__box"><a class="progress__link" href="#">cocktails</a><picture><source srcset="img/prog-galery6.webp" type="image/webp"><img src="img/prog-galery6.jpg" alt="cocktails"></picture></div>
+                    <div class="progress__box"><a class="progress__link" href="#">marmalade</a><picture><source srcset="img/prog-galery7.webp" type="image/webp"><img src="img/prog-galery7.jpg" alt="marmalade"></picture></div>
+                    <div class="progress__box"><a class="progress__link" href="#">vegetables</a><picture><source srcset="img/prog-galery8.webp" type="image/webp"><img src="img/prog-galery8.jpg" alt="vegetables"></picture></div>
                 </div>
             </section>
 
@@ -285,7 +285,7 @@
 
                     <div class="blog__post">
                         <div class="blog__date"><span>07</span> Nov</div>
-                        <div class="blog__img"><picture><source srcset="img/blog1.webp 1x, img/blog1@2x.webp 2x" type="image/webp"><img src="img/blog1.jpg" srcset="img/blog1@2x.jpg 2x" alt="picture of bread"></picture></div>
+                        <div class="blog__img"><picture><source srcset="img/blog1.webp" type="image/webp"><img src="img/blog1.jpg" alt="picture of bread"></picture></div>
                         <div class="blog__text">
                             <span>ORGANIC FOOD/TIPS & GUIDES</span>
                             <p>Tips for Ripening your Fruit</p>
@@ -293,7 +293,7 @@
                     </div>
                     <div class="blog__post">
                         <div class="blog__date"><span>03</span> Nov</div>
-                        <div class="blog__img"><picture><source srcset="img/blog2.webp 1x, img/blog2@2x.webp 2x" type="image/webp"><img src="img/blog2.jpg" srcset="img/blog2@2x.jpg 2x" alt="picture of broccoli"></picture></div>
+                        <div class="blog__img"><picture><source srcset="img/blog2.webp" type="image/webp"><img src="img/blog2.jpg" alt="picture of broccoli"></picture></div>
                         <div class="blog__text">
                             <span>DIET/ORGANIC FOOD</span>
                             <p>Health Benefits of a Raw Food</p>
@@ -301,7 +301,7 @@
                     </div>
                     <div class="blog__post">
                         <div class="blog__date"><span>25</span> Oct</div>
-                        <div class="blog__img"><picture><source srcset="img/blog3.webp 1x, img/blog3@2x.webp 2x" type="image/webp"><img src="img/blog3.jpg" srcset="img/blog3@2x.jpg 2x" alt="picture of pie"></picture></div>
+                        <div class="blog__img"><picture><source srcset="img/blog3.webp" type="image/webp"><img src="img/blog3.jpg" alt="picture of pie"></picture></div>
                         <div class="blog__text">
                             <span>DIET/ORGANIC FOOD</span>
                             <p> Superfoods you should be eating</p>
@@ -361,7 +361,7 @@
 
             <div class="footer__map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1577.9168370565073!2d-122.43370977974018!3d37.723581780691376!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7e8f1c3d1467%3A0xee1be9bd6ac0213c!2zMjMwIEJyYXppbCBBdmUsIFNhbiBGcmFuY2lzY28sIENBIDk0MTEyLCDQodCo0JA!5e0!3m2!1sru!2sru!4v1595193333592!5m2!1sru!2sru" 
-                height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                height="500" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
         </footer> 
 
