некорректный формат у 2-х картинок

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                             </div>
                         </div>
                         <div class="category__item _column">
-                            <picture><source srcset="img/cat-food.web" type="image/webp"><img src="img/cat-food.jpg" alt="organic food"></picture>
+                            <picture><source srcset="img/cat-food.webp" type="image/webp"><img src="img/cat-food.jpg" alt="organic food"></picture>
                             <div class="category__title _top"><span>organic</span>
                                 <p>food</p>
                             </div>
                         </div>
                         <div class="category__item _column">
-                            <picture><source srcset="img/cat-meet.web" type="image/webp"><img src="img/cat-meet.jpg" alt="tasty meat"></picture>
+                            <picture><source srcset="img/cat-meet.webp" type="image/webp"><img src="img/cat-meet.jpg" alt="tasty meat"></picture>
                             <div class="category__title _top"><span>tasty</span>
                                 <p>meat</p>
                             </div>
