--- a/index.html
+++ b/index.html
@@ -139,22 +139,22 @@
                     <button class="pages__btn">Discover</button>
                 </div>
                 <div class="pages__galery _container">
-                    <div class="pages__image"><picture><source srcset="img/galery1.webp" type="image/webp"><img src="img/galery1.jpg"  alt="sandwich"></picture></div>
+                    <div class="pages__image"><picture><source srcset="img/galery1.webp" type="image/webp"><img src="img/galery1.jpg" srcset="img/galery1@2x.jpg 2x" alt="sandwich"></picture></div>
                     <div class="pages__text"><span>Health Benefits of a Raw Food</span>Dogfish shark, bango hog sucker,
                         baikal oilfish, eeltail catfish regal whiptail catfish; squarehead catfish electric ray.</div>
-                    <div class="pages__image"><picture><source srcset="img/galery2.webp" type="image/webp"><img src="img/galery2.jpg" alt="serving breakfast"></picture></div>
+                    <div class="pages__image"><picture><source srcset="img/galery2.webp" type="image/webp"><img src="img/galery2.jpg" srcset="img/galery2@2x.jpg 2x" alt="serving breakfast"></picture></div>
                     <div class="pages__text"><span>Tips for Ripening your Fruit</span>The generated Lorem Ipsum is
                         therefore always free from repetition injected humour</div>
 
                     <div class="pages__text"><span>Superfoods you should be eating</span>The generated Lorem Ipsum is
                         therefore always free from repetition injected humour</div>
-                    <div class="pages__image"><picture><source srcset="img/galery3.webp" type="image/webp"><img src="img/galery3.jpg" alt="pancakes"></picture></div>
+                    <div class="pages__image"><picture><source srcset="img/galery3.webp" type="image/webp"><img src="img/galery3.jpg" srcset="img/galery3@2x.jpg 2x" alt="pancakes"></picture></div>
 
                     <div class="pages__text"><span>Grunt torrent catfish squaretail Norwegian Atlantic
                             salmon</span>Northern clingfish searobin betta blue shark. Jackfish leopard danio
                         suckermouth armored catfish, eelpout velvetfish goldspotted killifish--driftfish ronquil emperor
                         golden loach</div>
-                    <div class="pages__image"><picture><source srcset="img/galery4.webp" type="image/webp"><img src="img/galery4.jpg" alt="yogurt"></picture></div>
+                    <div class="pages__image"><picture><source srcset="img/galery4.webp" type="image/webp"><img src="img/galery4.jpg" srcset="img/galery4@2x.jpg 2x" alt="yogurt"></picture></div>
                 </div>
             </section>
 
@@ -204,7 +204,7 @@
                     </div>
                 </div>
                 <div class="progress__galery">
-                    <div class="progress__box"><a class="progress__link" href="#">tasty jam</a><picture><source srcset="img/prog-galery1.webp" type="image/webp"><img src="img/prog-galery1.jpg" alt="tasty jam"></picture></div>
+                    <div class="progress__box"><a class="progress__link" href="#">tasty jam</a><picture><source srcset="img/prog-galery1.webp" type="image/webp"><source media="(min-device-pixel-ratio: 2)" srcset="img/prog-galery1@1x.jpg"><img src="img/prog-galery1.jpg" alt="tasty jam"></picture></div>
                     <div class="progress__box"><a class="progress__link" href="#">cherry</a><picture><source srcset="img/prog-galery2.webp" type="image/webp"><img src="img/prog-galery2.jpg" alt="cherry"></picture></div>
                     <div class="progress__box"><a class="progress__link" href="#">healthy desert</a><picture><source srcset="img/prog-galery3.webp" type="image/webp"><img src="img/prog-galery3.jpg" alt="healthy desert"></picture></div>
                     <div class="progress__box"><a class="progress__link" href="#">raspberries</a><picture><source srcset="img/prog-galery4.webp" type="image/webp"><img src="img/prog-galery4.jpg" alt="raspberries"></picture></div>
