высота изображения для сафари

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     </div>
                 </div>
                 <div class="progress__galery">
-                    <div class="progress__box"><a class="progress__link" href="#">tasty jam</a><picture><source srcset="img/prog-galery1.webp" type="image/webp"><source media="(min-device-pixel-ratio: 2)" srcset="img/prog-galery1@1x.jpg"><img src="img/prog-galery1.jpg" alt="tasty jam"></picture></div>
+                    <div class="progress__box"><a class="progress__link" href="#">tasty jam</a><picture><source srcset="img/prog-galery1.webp" type="image/webp"><img src="img/prog-galery1.jpg" alt="tasty jam"></picture></div>
                     <div class="progress__box"><a class="progress__link" href="#">cherry</a><picture><source srcset="img/prog-galery2.webp" type="image/webp"><img src="img/prog-galery2.jpg" alt="cherry"></picture></div>
                     <div class="progress__box"><a class="progress__link" href="#">healthy desert</a><picture><source srcset="img/prog-galery3.webp" type="image/webp"><img src="img/prog-galery3.jpg" alt="healthy desert"></picture></div>
                     <div class="progress__box"><a class="progress__link" href="#">raspberries</a><picture><source srcset="img/prog-galery4.webp" type="image/webp"><img src="img/prog-galery4.jpg" alt="raspberries"></picture></div>
